--- a/data/publiccode.yml
+++ b/data/publiccode.yml
@@ -19,13 +19,13 @@ description:
     documentation: https://github.com/italia/awesome-italia
     features:
       - Feature one
-    genericName: Github Action
+    genericName: GitHub Action
     longDescription: >
-      This Github Action is being developed while paying a lot of attention to 
+      This GitHub Action is being developed while paying a lot of attention to 
       user  privacy and a number of measures have been taken to protect it.
       For   example, the app collects **no personal data that would disclose
       the  user’s identity,** such as the user’s name, age, address, email, or
-      phone  number. This Github Action is being developed while paying attention
+      phone  number. This GitHub Action is being developed while paying attention
       to user  privacy and a number of measures have been taken to protect it.
       For   example, the app collects **no personal data that would disclose
       the  user’s identity,** such as the user’s name, age, address, email, or
