--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: italia/publiccode-parser-action@v0.0.2-alpha
+      - uses: italia/publiccode-parser-action@v1
         with:
           publiccode: 'data/publiccode.yml'
       - name: Prepare testing env
